force-app/main/default/objects/Asset__c/Asset__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Asset Record Type Ids</label>
</CustomObject>