force-app/main/default/objects/Asset__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Display</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>