force-app/main/default/objects/Asset__c/fields/Project_Sample__c.field-meta.xml
<CustomField>
    <fullName>Project_Sample__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Project / Sample</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>