force-app/main/default/objects/Asset__c/fields/VIP_Personal__c.field-meta.xml
<CustomField>
    <fullName>VIP_Personal__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>VIP / Personal</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>